--- a/app/templates/demo.html
+++ b/app/templates/demo.html
@@ -284,12 +284,12 @@
                     </div>
                     {% if current_user.is_authenticated %}
                     <!-- For innloggede brukere: Direkte til Stripe kjøp -->
-                    <a href="https://buy.stripe.com/5kQcN503z30z2oL35wfYY03" class="btn btn-light btn-lg w-100 mb-3" target="_blank">
+                    <a href="https://buy.stripe.com/5kQcN503z30z2oL35wfYY03" class="btn btn-warning btn-lg w-100 mb-3" target="_blank">
                         <i class="bi bi-rocket"></i> Start abonnement nå
                     </a>
                     {% else %}
                     <!-- For uinnloggede brukere: Gå til pricing side -->
-                    <a href="{{ url_for('main.subscription') }}" class="btn btn-light btn-lg w-100 mb-3">
+                    <a href="{{ url_for('main.subscription') }}" class="btn btn-warning btn-lg w-100 mb-3">
                         <i class="bi bi-rocket"></i> Start abonnement nå
                     </a>
                     {% endif %}
