--- a/app/templates/index_simple.html
+++ b/app/templates/index_simple.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 {% if current_user.is_authenticated %}
-    <div class="container-fluid mt-4">
+    <div class="container py-4">
         <h1>Dashboard</h1>
         <p>Welcome to your dashboard!</p>
     </div>
