--- a/app/templates/oil_correlation.html
+++ b/app/templates/oil_correlation.html
@@ -106,7 +106,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid mt-4">
+<div class="container py-4">
     <!-- Header -->
     <div class="row mb-4">
         <div class="col-12">
