--- a/app/templates/stocks/graham.html
+++ b/app/templates/stocks/graham.html
@@ -3,7 +3,7 @@
 {% block title %}Benjamin Graham Analyse - Verdiinvestering | Aksjeradar{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <!-- Breadcrumb Navigation -->
     <nav aria-label="breadcrumb" class="mb-4">
         <ol class="breadcrumb">
