--- a/app/templates/stocks/short.html
+++ b/app/templates/stocks/short.html
@@ -1,5 +1,5 @@
 <!-- filepath: /workspaces/aksjeradarny/app/templates/stocks/short.html -->
-<div class="container-fluid mt-4">
+<div class="container py-4">
     <h1 class="mb-4">Short Analysis</h1>
     <p>Data is currently being fetched...</p>
     <div id="shortDataContainer"></div>
