--- a/app/templates/advanced/crypto_dashboard.html
+++ b/app/templates/advanced/crypto_dashboard.html
@@ -31,7 +31,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="container py-4">
     <div class="row">
         <div class="col-12">
             <h1 class="h2 mb-4">🚀 Crypto Dashboard</h1>
