--- a/app/templates/analysis/short-analysis.html
+++ b/app/templates/analysis/short-analysis.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container py-4">
     {% include 'analysis/_menu.html' %}
-    
+    <!-- Analysis menu is now always rendered at the top -->
     <div class="row">
         <div class="col-md-9">
             <div class="card shadow-sm mb-4">
