--- a/app/templates/backtest/strategy_builder.html
+++ b/app/templates/backtest/strategy_builder.html
@@ -8,7 +8,7 @@
 {% block title %}Strategibygger - Backtest | Aksjeradar{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <div class="row">
         <div class="col-md-12">
             <div class="d-flex justify-content-between align-items-center mb-4">
