--- a/app/templates/dashboard/financial.html
+++ b/app/templates/dashboard/financial.html
@@ -3,7 +3,7 @@
 {% block title %}Finansiell Dashboard - Aksjeradar{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <div class="row">
         <div class="col-12">
             <h1 class="mb-4">
