--- a/app/templates/financial_dashboard_new.html
+++ b/app/templates/financial_dashboard_new.html
@@ -3,7 +3,7 @@
 {% block title %}Finansiell Dashboard - Aksjeradar{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <div class="row">
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center mb-4">
