--- a/app/templates/pro/portfolio_analyzer.html
+++ b/app/templates/pro/portfolio_analyzer.html
@@ -3,7 +3,7 @@
 {% block title %}Porteføljeanalyse - Pro | Aksjeradar{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <div class="row">
         <div class="col-md-12">
             <div class="d-flex justify-content-between align-items-center mb-4">
