--- a/app/templates/realtime/charts.html
+++ b/app/templates/realtime/charts.html
@@ -34,7 +34,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid mt-4">
+<div class="container py-4">
     <div class="row">
         <div class="col-12">
             <h1 class="display-4 text-primary mb-4">
