--- a/app/templates/stocks/compare_minimal.html
+++ b/app/templates/stocks/compare_minimal.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <h1>Test Sammenligning</h1>
     
     {% if tickers and tickers|length > 0 %}
