--- a/app/templates/stocks/prices.html
+++ b/app/templates/stocks/prices.html
@@ -3,7 +3,7 @@
 {% block title %}Alle Priser - Aksjer, Krypto og Valuta | Aksjeradar{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="container py-4">
     <!-- Header -->
     <div class="row mb-4">
         <div class="col-12">
